# hypr-notch

./: Cargo.toml  LICENSE  README.md  codecompanion-workspace.json  diff.txt
examples/: config_colorful.toml  config_full.toml  config_minimal.toml
src/: app.rs  config.rs  config_watch.rs  draw.rs  draw_minimal.rs  layout.rs  lib.rs  main.rs  main_pointer_proven.rs  pointer.rs  wayland.rs
src/module/: interface.rs  mod.rs  registry.rs
src/modules/: clock.rs  mod.rs
