[package]
name = "hypr-notch"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay-client-toolkit = "0.18"
wayland-client = "0.31"
wayland-protocols-wlr = "0.2"
calloop = "0.12"
# Configuration handling
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
# Logging
log = "0.4"
env_logger = "0.10"

fontdue = "0.7"
calloop-wayland-source = "0.1"

