[package]
name = "hypr-notch"
path = "src/lib.rs"

version = "0.1.0"
edition = "2021"

[dependencies]
smithay-client-toolkit = "*"
wayland-client = "*"
wayland-protocols-wlr = "*"
calloop = "*"
calloop-wayland-source = "*"
serde = { version="*", features = ["derive"] }
toml = "*"
dirs = "*"
log = "*"
env_logger = "*"
fontdue = "*"
notify = "*"
libloading = "*"

